Changes have benn implemented

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <header>
   <div class="smoothie">
-    <img src="/smoothie.png" alt="">
+    <img src="/pala.png" alt="">
   </div>
   <div class="headings">
     <h2>Sadece Ölüler Görür</h2>
